fixed overflow visual errors and made some improvements to the code

--- a/index.css
+++ b/index.css
@@ -77,3 +77,7 @@ html, body, #main {
 }
 
 div button {margin: 2px;}
+
+#sidebar {
+    min-width: 150px;
+}
